--- a/dev/index.html
+++ b/dev/index.html
@@ -14,8 +14,8 @@
 
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="Educational Phaser Game Template" />
-    <meta name="apple-mobile-web-app-title" content="Educational Phaser Game Template" />
+    <meta name="application-name" content="Will First Game" />
+    <meta name="apple-mobile-web-app-title" content="Will First Game" />
     <meta name="msapplication-starturl" content="./" />
 
     <link rel="icon" type="image/png" sizes="192x192" href="./icons/icons-192.png" />
@@ -26,7 +26,7 @@
 
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
-    <title>Educational Phaser Game Template</title>
+    <title>Will First Game</title>
     <style>
         html,
         body {
@@ -49,5 +49,5 @@
 </head>
 <body>
 <div id="phaser-game"></div>
-<script type="text/javascript" src="/educational-phaser-game-template/dev/gen.vendors.bbe9474c65e057812275.bundle.js"></script><script type="text/javascript" src="/educational-phaser-game-template/dev/gen.main.d5c74dcf6e4dde0c2339.bundle.js"></script></body>
+<script type="text/javascript" src="/will-game/dev/gen.vendors.bbe9474c65e057812275.bundle.js"></script><script type="text/javascript" src="/will-game/dev/gen.main.64ff92af698bdb7bc8ea.bundle.js"></script></body>
 </html>
