--- a/dev/index.html
+++ b/dev/index.html
@@ -49,5 +49,5 @@
 </head>
 <body>
 <div id="phaser-game"></div>
-<script type="text/javascript" src="/will-game/dev/gen.vendors.bbe9474c65e057812275.bundle.js"></script><script type="text/javascript" src="/will-game/dev/gen.main.64ff92af698bdb7bc8ea.bundle.js"></script></body>
+<script type="text/javascript" src="/coding-2-try-phaser-William-Fox-Cantera/dev/gen.vendors.bbe9474c65e057812275.bundle.js"></script><script type="text/javascript" src="/coding-2-try-phaser-William-Fox-Cantera/dev/gen.main.ab8161446894364ba687.bundle.js"></script></body>
 </html>
